--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-/*# sourceMappingURL=main.css.map */
+body{cursor:url("img/light-saber-cursor.svg"),auto;background-color:#0a0a31}/*# sourceMappingURL=main.css.map */
