--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,7 @@
 
-body{
- cursor: url('img/light-saber-cursor.svg'), auto;   
+body{ 
  background-color: rgb(10, 10, 49);
+}
+cursor{
+    url(light-saber-ursor.svg);
 }
