--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,7 @@
 
-body{
- cursor: url('img/light-saber-cursor.svg'), auto;   
- background-color: rgb(10, 10, 49);
+body{  
+ background:url(/img/starwars-background.jpg);
+
+
+ cursor:url(/img/light-saber-cursor.svg), auto;  
 }
