made AJAX call to characters and films started collecting photos

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 
 body{  
- background:url(/img/starwars-background.jpg);
+ //background:url(/img/starwars-background.jpg);
 
  cursor:url(/img/light-saber-cursor.svg), auto;  
 }
