--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,1 @@
-body{background:url(/img/starwars-background.jpg);cursor:url(/img/light-saber-cursor.svg),auto}/*# sourceMappingURL=main.css.map */
+body{cursor:url(/img/light-saber-cursor.svg),auto}/*# sourceMappingURL=main.css.map */
