--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,5 @@
-
 body{ 
- background-color: rgb(10, 10, 49);
-}
-cursor{
-    url(light-saber-ursor.svg);
-}
+    background-color: rgb(10, 10, 49);
+   
+      cursor:  url(light-saber-cursor.svg);
+   }
