--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,6 @@
-body{ 
-    background-color: rgb(10, 10, 49);
+body{  
+    //background:url(/img/starwars-background.jpg);
    
-      cursor:  url(light-saber-cursor.svg);
+    cursor:url(/img/light-saber-cursor.svg), auto;  
    }
+   
