--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,7 +1,7 @@
-ody{  
-    background:url(/img/starwars-background.jpg);
+body{  
+    background:url(img/starwars-background.jpg);
    
-    cursor:url(/img/light-saber-cursor.svg), auto;  
+    cursor:url(img/light-saber-cursor.svg), auto;  
  
     color: rgb(172, 170, 170);
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
