--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -44,6 +44,11 @@ body{
    }
    .film-heading {
     padding-left: 10px;
+    padding-top: 20px;
+
+   }
+   .film-heading:hover{
+    color: rgb(220, 214, 214);
    }
    .film-description {
     padding-left: 10px;
